# otloss

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
comparison/: 01_gan_comparison.py  02_calibration_comparison.py  03_convergence_comparison.py  04_rlhf_reward_comparison.py  05_molecule_comparison.py  06_financial_timeseries_comparison.py  README.md  run_all.py
demo/: training_arena.html
examples/: 01_gan_image_generation.py  02_llm_calibration.py  03_molecule_generation.py
otloss/: __init__.py  distributions.py  functional.py  losses.py  utils.py
otloss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_wasserstein.py
